--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,8 @@
 <html>
     <head>
-        <title>Welcome</title></head>
+        <title>Welcome</title>
+    </head>
+    <body>
+        <h1>Hello</h1>
+    </body>
 </html>
