--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,11 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Welcome</title>
     </head>
     <body>
-        <h1>Hello</h1>
+        <div>
+            <h1>Hello</h1>
+        </div>
     </body>
 </html>
