--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
         <title>Welcome</title>
     </head>
     <body>
-        <div>
+        <div class="title">
             <h1>Hello</h1>
         </div>
     </body>
